test/tests/errors/error-class-inherit-no-non-subtype2.sm
// true
// false
// false
/**/
/**/

program {
    class A {
        public record x(a: int);
    }

    class B extends A {
        public record x();
    }
}